Add example using simulator wrapper

--- a/notebooks/mono_camera_basic_example.ipynb
+++ b/notebooks/mono_camera_basic_example.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-10-30T07:31:32.464856Z",
-     "start_time": "2024-10-30T07:31:32.033127Z"
+     "end_time": "2024-10-30T07:37:06.932803Z",
+     "start_time": "2024-10-30T07:37:06.723852Z"
     }
    },
    "source": [
@@ -34,7 +34,7 @@
      ]
     }
    ],
-   "execution_count": 242
+   "execution_count": 265
   },
   {
    "metadata": {},
@@ -45,8 +45,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T07:31:32.556731Z",
-     "start_time": "2024-10-30T07:31:32.466857Z"
+     "end_time": "2024-10-30T07:37:06.978030Z",
+     "start_time": "2024-10-30T07:37:06.934810Z"
     }
    },
    "cell_type": "code",
@@ -56,13 +56,13 @@
    ],
    "id": "578c953bfd6535e6",
    "outputs": [],
-   "execution_count": 243
+   "execution_count": 266
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T07:31:32.649896Z",
-     "start_time": "2024-10-30T07:31:32.558741Z"
+     "end_time": "2024-10-30T07:37:07.025025Z",
+     "start_time": "2024-10-30T07:37:06.979023Z"
     }
    },
    "cell_type": "code",
@@ -88,13 +88,13 @@
    ],
    "id": "4cc057ac5699d5e8",
    "outputs": [],
-   "execution_count": 244
+   "execution_count": 267
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T07:31:32.726012Z",
-     "start_time": "2024-10-30T07:31:32.650721Z"
+     "end_time": "2024-10-30T07:37:07.072173Z",
+     "start_time": "2024-10-30T07:37:07.026025Z"
     }
    },
    "cell_type": "code",
@@ -116,13 +116,13 @@
    ],
    "id": "b5ee0885b9cb8f0e",
    "outputs": [],
-   "execution_count": 245
+   "execution_count": 268
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T07:31:32.805101Z",
-     "start_time": "2024-10-30T07:31:32.729011Z"
+     "end_time": "2024-10-30T07:37:07.119258Z",
+     "start_time": "2024-10-30T07:37:07.074173Z"
     }
    },
    "cell_type": "code",
@@ -133,13 +133,13 @@
    ],
    "id": "daf513a91d0a7271",
    "outputs": [],
-   "execution_count": 246
+   "execution_count": 269
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T07:31:32.897164Z",
-     "start_time": "2024-10-30T07:31:32.806103Z"
+     "end_time": "2024-10-30T07:37:07.165360Z",
+     "start_time": "2024-10-30T07:37:07.119761Z"
     }
    },
    "cell_type": "code",
@@ -150,13 +150,13 @@
    ],
    "id": "3406963697a24ff",
    "outputs": [],
-   "execution_count": 247
+   "execution_count": 270
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T07:31:32.989044Z",
-     "start_time": "2024-10-30T07:31:32.898157Z"
+     "end_time": "2024-10-30T07:37:07.211439Z",
+     "start_time": "2024-10-30T07:37:07.166360Z"
     }
    },
    "cell_type": "code",
@@ -175,18 +175,18 @@
        "{'g': 2.0, 'd': 3.0}"
       ]
      },
-     "execution_count": 248,
+     "execution_count": 271,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 248
+   "execution_count": 271
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T07:31:33.067639Z",
-     "start_time": "2024-10-30T07:31:32.990909Z"
+     "end_time": "2024-10-30T07:37:07.257962Z",
+     "start_time": "2024-10-30T07:37:07.212439Z"
     }
    },
    "cell_type": "code",
@@ -208,13 +208,13 @@
    ],
    "id": "b65c1d358905e9c",
    "outputs": [],
-   "execution_count": 249
+   "execution_count": 272
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T07:31:33.597939Z",
-     "start_time": "2024-10-30T07:31:33.069188Z"
+     "end_time": "2024-10-30T07:37:07.489066Z",
+     "start_time": "2024-10-30T07:37:07.258963Z"
     }
    },
    "cell_type": "code",
@@ -224,13 +224,13 @@
    ],
    "id": "f9a45ccea43c5538",
    "outputs": [],
-   "execution_count": 250
+   "execution_count": 273
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T07:31:33.659647Z",
-     "start_time": "2024-10-30T07:31:33.599710Z"
+     "end_time": "2024-10-30T07:37:07.535730Z",
+     "start_time": "2024-10-30T07:37:07.489661Z"
     }
    },
    "cell_type": "code",
@@ -243,13 +243,13 @@
    ],
    "id": "bc1831697a59cd78",
    "outputs": [],
-   "execution_count": 251
+   "execution_count": 274
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T07:31:33.831905Z",
-     "start_time": "2024-10-30T07:31:33.661182Z"
+     "end_time": "2024-10-30T07:37:07.613199Z",
+     "start_time": "2024-10-30T07:37:07.536729Z"
     }
    },
    "cell_type": "code",
@@ -262,10 +262,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x15c44d41610>]"
+       "[<matplotlib.lines.Line2D at 0x15c474b87c0>]"
       ]
      },
-     "execution_count": 252,
+     "execution_count": 275,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -280,7 +280,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 252
+   "execution_count": 275
   },
   {
    "metadata": {},
@@ -291,8 +291,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T07:31:41.920657Z",
-     "start_time": "2024-10-30T07:31:33.833918Z"
+     "end_time": "2024-10-30T07:37:14.139992Z",
+     "start_time": "2024-10-30T07:37:07.614199Z"
     }
    },
    "cell_type": "code",
@@ -303,13 +303,13 @@
    ],
    "id": "fb010be8f889afca",
    "outputs": [],
-   "execution_count": 253
+   "execution_count": 276
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T07:31:41.968063Z",
-     "start_time": "2024-10-30T07:31:41.921658Z"
+     "end_time": "2024-10-30T07:37:14.185617Z",
+     "start_time": "2024-10-30T07:37:14.140871Z"
     }
    },
    "cell_type": "code",
@@ -327,13 +327,13 @@
      ]
     }
    ],
-   "execution_count": 254
+   "execution_count": 277
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T07:31:42.092229Z",
-     "start_time": "2024-10-30T07:31:41.969817Z"
+     "end_time": "2024-10-30T07:37:14.308910Z",
+     "start_time": "2024-10-30T07:37:14.186617Z"
     }
    },
    "cell_type": "code",
@@ -355,7 +355,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 255
+   "execution_count": 278
   },
   {
    "metadata": {},
@@ -366,8 +366,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T07:31:42.140095Z",
-     "start_time": "2024-10-30T07:31:42.093221Z"
+     "end_time": "2024-10-30T07:37:14.356677Z",
+     "start_time": "2024-10-30T07:37:14.309912Z"
     }
    },
    "cell_type": "code",
@@ -384,29 +384,29 @@
    ],
    "id": "e39f97eb4e846461",
    "outputs": [],
-   "execution_count": 256
+   "execution_count": 279
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T07:31:42.187385Z",
-     "start_time": "2024-10-30T07:31:42.140598Z"
+     "end_time": "2024-10-30T07:37:14.403402Z",
+     "start_time": "2024-10-30T07:37:14.357677Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# Set each sensor noise level separately\n",
-    "sensor_noise = {'x': 0.1, 'v': 0.1, 'm': 0.1, 'k': 0.1, 'b': 0.1, 'r':0.1}"
+    "sensor_noise = {'r':0.1}"
    ],
    "id": "27d52b8e17875b9",
    "outputs": [],
-   "execution_count": 257
+   "execution_count": 280
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T07:31:44.565630Z",
-     "start_time": "2024-10-30T07:31:42.187385Z"
+     "end_time": "2024-10-30T07:37:16.672090Z",
+     "start_time": "2024-10-30T07:37:14.404407Z"
     }
    },
    "cell_type": "code",
@@ -438,13 +438,152 @@
    ],
    "id": "7c4b86147f6be5fa",
    "outputs": [],
-   "execution_count": 258
+   "execution_count": 281
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T07:31:44.611720Z",
-     "start_time": "2024-10-30T07:31:44.566630Z"
+     "end_time": "2024-10-30T07:37:20.483663Z",
+     "start_time": "2024-10-30T07:37:20.443714Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "FO.R",
+   "id": "a624044a337b0f63",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sensor              r                         \n",
+       "time_step           0    1    2    3    4    5\n",
+       "sensor time_step                              \n",
+       "r      0          0.1  0.0  0.0  0.0  0.0  0.0\n",
+       "       1          0.0  0.1  0.0  0.0  0.0  0.0\n",
+       "       2          0.0  0.0  0.1  0.0  0.0  0.0\n",
+       "       3          0.0  0.0  0.0  0.1  0.0  0.0\n",
+       "       4          0.0  0.0  0.0  0.0  0.1  0.0\n",
+       "       5          0.0  0.0  0.0  0.0  0.0  0.1"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>sensor</th>\n",
+       "      <th colspan=\"6\" halign=\"left\">r</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>time_step</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sensor</th>\n",
+       "      <th>time_step</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"6\" valign=\"top\">r</th>\n",
+       "      <th>0</th>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 288,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 288
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-30T07:37:16.764871Z",
+     "start_time": "2024-10-30T07:37:16.719741Z"
     }
    },
    "cell_type": "code",
@@ -578,18 +717,18 @@
        "</div>"
       ]
      },
-     "execution_count": 259,
+     "execution_count": 283,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 259
+   "execution_count": 283
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T07:31:44.810615Z",
-     "start_time": "2024-10-30T07:31:44.612712Z"
+     "end_time": "2024-10-30T07:37:16.965992Z",
+     "start_time": "2024-10-30T07:37:16.765872Z"
     }
    },
    "cell_type": "code",
@@ -611,7 +750,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 260
+   "execution_count": 284
   },
   {
    "metadata": {},
@@ -622,8 +761,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T07:31:44.983485Z",
-     "start_time": "2024-10-30T07:31:44.811663Z"
+     "end_time": "2024-10-30T07:37:17.103946Z",
+     "start_time": "2024-10-30T07:37:16.966994Z"
     }
    },
    "cell_type": "code",
@@ -659,7 +798,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 261
+   "execution_count": 285
   },
   {
    "metadata": {},
@@ -670,21 +809,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T07:31:45.030090Z",
-     "start_time": "2024-10-30T07:31:44.984487Z"
+     "end_time": "2024-10-30T07:37:17.149731Z",
+     "start_time": "2024-10-30T07:37:17.104947Z"
     }
    },
    "cell_type": "code",
    "source": "EV_no_nan = EV_aligned.fillna(method='bfill').fillna(method='ffill')",
    "id": "6e348fd2e8daabd",
    "outputs": [],
-   "execution_count": 262
+   "execution_count": 286
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T07:31:45.869826Z",
-     "start_time": "2024-10-30T07:31:45.031054Z"
+     "end_time": "2024-10-30T07:37:17.851710Z",
+     "start_time": "2024-10-30T07:37:17.150734Z"
     }
    },
    "cell_type": "code",
@@ -732,10 +871,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<matplotlib.colors.LogNorm object at 0x0000015C45651580>\n",
-      "<matplotlib.colors.LogNorm object at 0x0000015C45651580>\n",
-      "<matplotlib.colors.LogNorm object at 0x0000015C45651580>\n",
-      "<matplotlib.colors.LogNorm object at 0x0000015C45651580>\n"
+      "<matplotlib.colors.LogNorm object at 0x0000015C469473D0>\n",
+      "<matplotlib.colors.LogNorm object at 0x0000015C469473D0>\n",
+      "<matplotlib.colors.LogNorm object at 0x0000015C469473D0>\n",
+      "<matplotlib.colors.LogNorm object at 0x0000015C469473D0>\n"
      ]
     },
     {
@@ -749,20 +888,20 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 263
+   "execution_count": 287
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-30T07:31:45.884818Z",
-     "start_time": "2024-10-30T07:31:45.870331Z"
+     "end_time": "2024-10-30T07:37:17.867029Z",
+     "start_time": "2024-10-30T07:37:17.852710Z"
     }
    },
    "cell_type": "code",
    "source": "",
    "id": "61a341f54bf21469",
    "outputs": [],
-   "execution_count": 263
+   "execution_count": 287
   }
  ],
  "metadata": {
