--- a/examples/mono_camera_example.ipynb
+++ b/examples/mono_camera_example.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T21:52:26.756737Z",
-     "start_time": "2024-10-31T21:52:23.482156Z"
+     "end_time": "2024-10-31T22:30:22.644867Z",
+     "start_time": "2024-10-31T22:30:22.633868Z"
     }
    },
    "cell_type": "code",
@@ -16,7 +16,7 @@
    ],
    "id": "f1902de9ebff5a59",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 25
   },
   {
    "metadata": {},
@@ -57,8 +57,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T21:52:26.772738Z",
-     "start_time": "2024-10-31T21:52:26.758740Z"
+     "end_time": "2024-10-31T22:30:22.836868Z",
+     "start_time": "2024-10-31T22:30:22.819871Z"
     }
    },
    "cell_type": "code",
@@ -83,7 +83,7 @@
    ],
    "id": "afa5cf8d9cf2a145",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 26
   },
   {
    "metadata": {},
@@ -94,8 +94,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T21:52:26.788738Z",
-     "start_time": "2024-10-31T21:52:26.774743Z"
+     "end_time": "2024-10-31T22:30:22.852871Z",
+     "start_time": "2024-10-31T22:30:22.842867Z"
     }
    },
    "cell_type": "code",
@@ -116,7 +116,7 @@
    ],
    "id": "fd93d3dbf5535e4b",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 27
   },
   {
    "metadata": {},
@@ -127,15 +127,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T21:52:26.804739Z",
-     "start_time": "2024-10-31T21:52:26.790740Z"
+     "end_time": "2024-10-31T22:30:22.867878Z",
+     "start_time": "2024-10-31T22:30:22.856887Z"
     }
    },
    "cell_type": "code",
    "source": "dt = 0.01  # [s]",
    "id": "af1c2296132affea",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 28
   },
   {
    "metadata": {},
@@ -146,8 +146,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T21:52:26.852738Z",
-     "start_time": "2024-10-31T21:52:26.807741Z"
+     "end_time": "2024-10-31T22:30:22.914868Z",
+     "start_time": "2024-10-31T22:30:22.871868Z"
     }
    },
    "cell_type": "code",
@@ -159,7 +159,7 @@
    ],
    "id": "a2ba514ec911b5e9",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 29
   },
   {
    "metadata": {},
@@ -170,8 +170,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T21:52:26.867738Z",
-     "start_time": "2024-10-31T21:52:26.855739Z"
+     "end_time": "2024-10-31T22:30:22.930868Z",
+     "start_time": "2024-10-31T22:30:22.917873Z"
     }
    },
    "cell_type": "code",
@@ -185,13 +185,13 @@
    ],
    "id": "27615e7f576460b1",
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 30
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T21:52:26.883740Z",
-     "start_time": "2024-10-31T21:52:26.869738Z"
+     "end_time": "2024-10-31T22:30:22.946872Z",
+     "start_time": "2024-10-31T22:30:22.934874Z"
     }
    },
    "cell_type": "code",
@@ -212,7 +212,7 @@
    ],
    "id": "65fe013fd3e27a7d",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 31
   },
   {
    "metadata": {},
@@ -223,21 +223,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T21:52:27.345740Z",
-     "start_time": "2024-10-31T21:52:26.886743Z"
+     "end_time": "2024-10-31T22:30:23.372017Z",
+     "start_time": "2024-10-31T22:30:22.955874Z"
     }
    },
    "cell_type": "code",
    "source": "t_sim, x_sim, u_sim, y_sim = simulator.simulate(x0=x0, u=u, return_full_output=True)",
    "id": "eed7753f15c19a68",
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 32
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T21:52:27.584744Z",
-     "start_time": "2024-10-31T21:52:27.347743Z"
+     "end_time": "2024-10-31T22:30:23.527013Z",
+     "start_time": "2024-10-31T22:30:23.376003Z"
     }
    },
    "cell_type": "code",
@@ -254,10 +254,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2a7e1097ca0>"
+       "<matplotlib.legend.Legend at 0x2a7e365fe80>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -272,7 +272,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 9
+   "execution_count": 33
   },
   {
    "metadata": {},
@@ -289,21 +289,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T21:52:27.600745Z",
-     "start_time": "2024-10-31T21:52:27.588750Z"
+     "end_time": "2024-10-31T22:30:23.543009Z",
+     "start_time": "2024-10-31T22:30:23.532005Z"
     }
    },
    "cell_type": "code",
    "source": "w = 6  # window size, set to None to use entire time-series as one window",
    "id": "1816060219c9f891",
    "outputs": [],
-   "execution_count": 10
+   "execution_count": 34
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T21:52:41.022616Z",
-     "start_time": "2024-10-31T21:52:27.604747Z"
+     "end_time": "2024-10-31T22:30:36.622859Z",
+     "start_time": "2024-10-31T22:30:23.545006Z"
     }
    },
    "cell_type": "code",
@@ -313,13 +313,13 @@
    ],
    "id": "6d3208ab8cebb1f8",
    "outputs": [],
-   "execution_count": 11
+   "execution_count": 35
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T21:52:41.037495Z",
-     "start_time": "2024-10-31T21:52:41.025619Z"
+     "end_time": "2024-10-31T22:30:36.638862Z",
+     "start_time": "2024-10-31T22:30:36.630860Z"
     }
    },
    "cell_type": "code",
@@ -329,13 +329,13 @@
    ],
    "id": "2ea89c4c3fdd5747",
    "outputs": [],
-   "execution_count": 12
+   "execution_count": 36
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T21:52:41.052505Z",
-     "start_time": "2024-10-31T21:52:41.040503Z"
+     "end_time": "2024-10-31T22:30:36.654858Z",
+     "start_time": "2024-10-31T22:30:36.642860Z"
     }
    },
    "cell_type": "code",
@@ -353,13 +353,13 @@
      ]
     }
    ],
-   "execution_count": 13
+   "execution_count": 37
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T21:52:41.399470Z",
-     "start_time": "2024-10-31T21:52:41.055504Z"
+     "end_time": "2024-10-31T22:30:36.907859Z",
+     "start_time": "2024-10-31T22:30:36.659859Z"
     }
    },
    "cell_type": "code",
@@ -381,7 +381,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 14
+   "execution_count": 38
   },
   {
    "metadata": {},
@@ -392,8 +392,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T21:52:41.415467Z",
-     "start_time": "2024-10-31T21:52:41.403468Z"
+     "end_time": "2024-10-31T22:30:36.922861Z",
+     "start_time": "2024-10-31T22:30:36.911861Z"
     }
    },
    "cell_type": "code",
@@ -403,13 +403,13 @@
    ],
    "id": "451fd6cf6383e439",
    "outputs": [],
-   "execution_count": 15
+   "execution_count": 39
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T21:52:41.445473Z",
-     "start_time": "2024-10-31T21:52:41.419471Z"
+     "end_time": "2024-10-31T22:30:36.954074Z",
+     "start_time": "2024-10-31T22:30:36.926861Z"
     }
    },
    "cell_type": "code",
@@ -423,13 +423,13 @@
    ],
    "id": "9aaaf5056bf75fed",
    "outputs": [],
-   "execution_count": 16
+   "execution_count": 40
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T21:52:41.477465Z",
-     "start_time": "2024-10-31T21:52:41.448476Z"
+     "end_time": "2024-10-31T22:30:36.985116Z",
+     "start_time": "2024-10-31T22:30:36.958068Z"
     }
    },
    "cell_type": "code",
@@ -486,12 +486,12 @@
        "</div>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 17
+   "execution_count": 41
   },
   {
    "metadata": {},
@@ -502,8 +502,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T21:52:41.493469Z",
-     "start_time": "2024-10-31T21:52:41.483465Z"
+     "end_time": "2024-10-31T22:30:37.001065Z",
+     "start_time": "2024-10-31T22:30:36.989066Z"
     }
    },
    "cell_type": "code",
@@ -520,13 +520,13 @@
    ],
    "id": "94b30b60ed5543e9",
    "outputs": [],
-   "execution_count": 18
+   "execution_count": 42
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T21:52:46.357445Z",
-     "start_time": "2024-10-31T21:52:41.495470Z"
+     "end_time": "2024-10-31T22:30:41.659069Z",
+     "start_time": "2024-10-31T22:30:37.004067Z"
     }
    },
    "cell_type": "code",
@@ -537,13 +537,13 @@
    ],
    "id": "b77d1363934e9933",
    "outputs": [],
-   "execution_count": 19
+   "execution_count": 43
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T21:52:46.372468Z",
-     "start_time": "2024-10-31T21:52:46.361467Z"
+     "end_time": "2024-10-31T22:30:41.674073Z",
+     "start_time": "2024-10-31T22:30:41.663067Z"
     }
    },
    "cell_type": "code",
@@ -553,13 +553,13 @@
    ],
    "id": "bf67c35cfee44ceb",
    "outputs": [],
-   "execution_count": 20
+   "execution_count": 44
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T21:52:46.403536Z",
-     "start_time": "2024-10-31T21:52:46.376467Z"
+     "end_time": "2024-10-31T22:30:41.721075Z",
+     "start_time": "2024-10-31T22:30:41.682068Z"
     }
    },
    "cell_type": "code",
@@ -693,12 +693,12 @@
        "</div>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 21
+   "execution_count": 45
   },
   {
    "metadata": {},
@@ -709,8 +709,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T21:52:46.736467Z",
-     "start_time": "2024-10-31T21:52:46.407469Z"
+     "end_time": "2024-10-31T22:30:42.037069Z",
+     "start_time": "2024-10-31T22:30:41.725068Z"
     }
    },
    "cell_type": "code",
@@ -745,7 +745,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 22
+   "execution_count": 46
   },
   {
    "metadata": {},
@@ -756,21 +756,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T21:52:46.751469Z",
-     "start_time": "2024-10-31T21:52:46.739465Z"
+     "end_time": "2024-10-31T22:30:42.053068Z",
+     "start_time": "2024-10-31T22:30:42.042069Z"
     }
    },
    "cell_type": "code",
    "source": "EV_no_nan = EV_aligned.fillna(method='bfill').fillna(method='ffill')",
    "id": "331553b8964df341",
    "outputs": [],
-   "execution_count": 23
+   "execution_count": 47
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T21:52:48.426684Z",
-     "start_time": "2024-10-31T21:52:46.754466Z"
+     "end_time": "2024-10-31T22:30:43.823069Z",
+     "start_time": "2024-10-31T22:30:42.058074Z"
     }
    },
    "cell_type": "code",
@@ -818,10 +818,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<matplotlib.colors.LogNorm object at 0x000002A7E381B040>\n",
-      "<matplotlib.colors.LogNorm object at 0x000002A7E381B040>\n",
-      "<matplotlib.colors.LogNorm object at 0x000002A7E381B040>\n",
-      "<matplotlib.colors.LogNorm object at 0x000002A7E381B040>\n"
+      "<matplotlib.colors.LogNorm object at 0x000002A7E34F17F0>\n",
+      "<matplotlib.colors.LogNorm object at 0x000002A7E34F17F0>\n",
+      "<matplotlib.colors.LogNorm object at 0x000002A7E34F17F0>\n",
+      "<matplotlib.colors.LogNorm object at 0x000002A7E34F17F0>\n"
      ]
     },
     {
@@ -835,20 +835,20 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 24
+   "execution_count": 48
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-31T21:52:48.442685Z",
-     "start_time": "2024-10-31T21:52:48.429686Z"
+     "end_time": "2024-10-31T22:30:43.839069Z",
+     "start_time": "2024-10-31T22:30:43.828075Z"
     }
    },
    "cell_type": "code",
    "source": "",
    "id": "5d364ffb98b817bf",
    "outputs": [],
-   "execution_count": 24
+   "execution_count": 48
   }
  ],
  "metadata": {
